--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 
     <section class="start-container">
-        <h1 id="main-heading"> Hi, my name is <span style="color: rgb(89, 89, 211);"> Faizan Ahmad Khan. </span> <br>
+        <h1 id="main-heading"> Hi, my name is <b> <span style="color: rgb(89, 89, 211);"> Faizan
+                    Ahmad Khan.
+                </span></b> <br>
             I'm the Front End Developer you need.</h1>
         <a href="#hero"> <button class="firstBtn"> Know more </button></a>
     </section>
