--- a/index.html
+++ b/index.html
@@ -94,28 +94,25 @@
             <h2>TimeCraft</h2>
             <p>Where every watch is a crafted story of your journey.Each timepiece is not just a tool to tell time, but
                 a timeless accessory that
-                narrates your personal story. Experience
-                the joy of time with our exquisite timepieces, designed just for
-                you.</p>
+                narrates your personal story.</p>
             <a href="https://faizan-ahmad-khan.github.io/TimeCraft/" target="_blank"><button>See Live</button></a>
             <a href="https://github.com/Faizan-Ahmad-Khan/TimeCraft" target="_blank"
                 style="color: rgb(89, 89, 211); font-size: 14px; margin-left: 8px;">Source Code</a>
         </div>
         <div class="my-work">
-            <img src="assets/images/pp2.png" alt="project-img">
-            <h2>Pawsvila</h2>
-            <p> Our story began with a
-                simple yet profound love for all creatures with paws, tails, whiskers, and wings. Founded by passionate
-                animal lovers, we set out on a mission to create a haven where pets receive the love, care, they
-                deserve.</p>
-            <a href="https://faizan-ahmad-khan.github.io/Pets-Web-Project/" target="_blank"><button>See
+            <img src="assets/images/project.png" alt="project-img">
+            <h2>We Care</h2>
+            <p>Our story began with a profound love for all children. We are on a mission to create a
+                world where
+                every child receives the love, care, and opportunities they deserve.</p>
+            <a href="https://lnkd.in/dmG4ct4E" target="_blank"><button>See
                     Live</button></a>
-            <a href="https://github.com/Faizan-Ahmad-Khan/Pets-Web-Project" target="_blank"
-                style="color: rgb(89, 89, 211); font-size: 14px; margin-left: 8px;">Source Code</a>
+            <a href="https://lnkd.in/dmG4ct4E" target="_blank"
+                style="color: rgb(89, 89, 211); font-size: 14px; margin-left: 8px; ">Source Code</a>
         </div>
     </section>
 
-    <section class="contact">
+    <section class=" contact">
         <div class="contact-container">
             <h1>Contact</h1>
             <p>fa3n20004@gmail.com</p>
